--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -8,7 +8,10 @@
       <img src="img/Logo.png" alt="Eduardo Barreto" style="width: auto; height: 60px;">
     </a>
 
-    <!-- Menu icon -->
+    <!-- Espaçador vazio quando não há logo (para manter layout) -->
+    <div *ngIf="!isHomePage()" class="logo-spacer"></div>
+
+    <!-- Menu icon (SEMPRE presente, visibilidade controlada por CSS) -->
     <div class="menu-icon" (click)="toggleMobileMenu()">
       <svg *ngIf="!mobileMenuOpen()" xmlns="http://www.w3.org/2000/svg" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor">
         <path stroke-linecap="round" stroke-linejoin="round" d="M3.75 6.75h16.5M3.75 12h16.5m-16.5 5.25h16.5" />
