feat: Implementa sistema completo de páginas legais e modal
 Novos recursos:
- Componente Terms of Service (/termos-de-uso) com 11 seções completas
- Componente Privacy Policy (/politica-privacidade) com 13 seções LGPD-compliant
- Modal reutilizável para exibir políticas no contexto do registro
- Integração completa com formulário de registro

 Estilo e UX:
- Design glassmorphism consistente com o projeto
- Animações suaves (slideUp, fadeIn, borderPulse)
- Totalmente responsivo (breakpoints 768px, 480px)
- Scrollbar customizada
- Efeitos hover e shine effects

 Melhorias técnicas:
- Rotas adicionadas no app.routes.ts
- Modal com controle de scroll do body
- Links clicáveis nos checkboxes do registro
- Navegação híbrida: modal contextual + páginas completas

 Responsividade:
- Blog post component melhorado com navegação separada
- Touch device optimizations
- Fix do botão voltar em todas as resoluções

--- a/src/app/auth/register/register.component.html
+++ b/src/app/auth/register/register.component.html
@@ -135,7 +135,7 @@
           >
           <span class="checkbox-custom"></span>
           <span class="checkbox-text">
-            Aceito os <a href="#" class="link">termos de uso</a> e <a href="#" class="link">política de privacidade</a>
+            Aceito os <a href="#" class="link" (click)="openTermsModal($event)">termos de uso</a> e <a href="#" class="link" (click)="openPrivacyModal($event)">política de privacidade</a>
           </span>
         </label>
         <div class="form-error" *ngIf="registerForm.get('acceptTerms')?.invalid && registerForm.get('acceptTerms')?.touched">
@@ -186,3 +186,10 @@
     </form>
   </div>
 </div>
+
+<!-- Policy Modal -->
+<app-policy-modal
+  [isOpen]="isModalOpen"
+  [policyType]="modalPolicyType"
+  (close)="closeModal()"
+></app-policy-modal>
