--- a/src/app/blog/blog-post/blog-post.component.html
+++ b/src/app/blog/blog-post/blog-post.component.html
@@ -12,7 +12,15 @@
 
   <ng-template #content>
     <div *ngIf="post; else notFound">
-      <a routerLink="/blog" class="back-link">← Voltar para todos os artigos</a>
+      <!-- Navegação fora do header -->
+      <nav class="post-navigation">
+        <a routerLink="/blog" class="back-link">
+          <svg width="20" height="20" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2">
+            <path d="M19 12H5M12 19l-7-7 7-7"/>
+          </svg>
+          <span>Todos os artigos</span>
+        </a>
+      </nav>
 
       <header class="post-header">
         <h1>{{ post.title }}</h1>
